--- a/PhoneBook/project.json
+++ b/PhoneBook/project.json
@@ -11,6 +11,12 @@
         "Microsoft.NETCore.App": {
           "type": "platform",
           "version": "1.1.0"
+        },
+        "Newtonsoft.Json" :{
+          "version": "9.0.1"
+        },
+        "System.IO.FileSystem" :{
+          "version": "4.3.0"
         }
       },
       "imports": "dnxcore50"
